# Calibration

odomcal/: CMakeLists.txt  README.md~  observations.txt~  odomcal.cpp  odomcal.cpp~  odomcal.launch~  odomcal2.launch~  package.xml  package.xml~  result.cpp~
odomcal/result/: result.txt
odomcal/test/: bug1.txt  bug2.txt  bug3.txt  bug4.txt  observations.txt  observations_bug.txt  test_1.txt  test_2.txt  test_3.txt  test_4.txt
